--- a/index.html
+++ b/index.html
@@ -1,13 +1,1 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Hello My Git Page!!!!</title>
-</head>
-<body>
-    what do you want to do?
-</body>
-</html>
+<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=icon href=/favicon.ico><title>mathematical_expression</title><link rel=stylesheet href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"><link rel=stylesheet href=https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css><link href=/css/app.8dbf62d0.css rel=preload as=style><link href=/css/chunk-vendors.c17e4cc6.css rel=preload as=style><link href=/js/app.d09691db.js rel=preload as=script><link href=/js/chunk-vendors.e6ab3827.js rel=preload as=script><link href=/css/chunk-vendors.c17e4cc6.css rel=stylesheet><link href=/css/app.8dbf62d0.css rel=stylesheet></head><body><noscript><strong>We're sorry but mathematical_expression doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=/js/chunk-vendors.e6ab3827.js></script><script src=/js/app.d09691db.js></script></body></html>
